--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     <!-- 头部 -->
     <div class="header wrapper">
         <!-- logo -->
-        <div class="logo"></div>
+        <div class="logo">
+            <h1><a href="#">小兔鲜儿</a></h1>
+        </div>
         <!-- 导航 -->
-        <div class="nav"></div>
+        <div class="nav">导航</div>
         <!-- 搜索 -->
-        <div class="search"></div>
+        <div class="search">搜索</div>
         <!-- 购物车 -->
-        <div class="cart"></div>
+        <div class="cart">购物车</div>
     </div>
 </body>
 
