--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
             <h1><a href="#">小兔鲜儿</a></h1>
         </div>
         <!-- 导航 -->
-        <div class="nav">导航</div>
+        <div class="nav">
+            <ul>
+                <li><a href="">首页</a></li>
+                <li><a href="">生鲜</a></li>
+                <li><a href="">美食</a></li>
+                <li><a href="">餐厨</a></li>
+                <li><a href="">电器</a></li>
+                <li><a href="">居家</a></li>
+                <li><a href="">洗护</a></li>
+                <li><a href="">孕婴</a></li>
+                <li><a href="">服装</a></li>
+            </ul>
+        </div>
         <!-- 搜索 -->
         <div class="search">搜索</div>
         <!-- 购物车 -->
