头部-搜索框

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             </ul>
         </div>
         <!-- 搜索 -->
-        <div class="search">搜索</div>
+        <div class="search">
+            <span class="iconfont icon-sousuo"></span>
+            <input type="text" placeholder="搜一搜">
+        </div>
         <!-- 购物车 -->
-        <div class="cart">购物车</div>
+        <div class="cart">购</div>
     </div>
 </body>
 
