头部-购物车图标

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
             <input type="text" placeholder="搜一搜">
         </div>
         <!-- 购物车 -->
-        <div class="cart">购</div>
+        <div class="cart">
+            <a href="#" class="iconfont icon-shaixuan"></a>
+            <i>2</i>
+        </div>
     </div>
 </body>
 
