--- a/index.html
+++ b/index.html
@@ -64,6 +64,94 @@
             <i>2</i>
         </div>
     </div>
+
+    <!-- 底部 -->
+    <div class="footer">
+        <div class="wrapper">
+            <!-- 服务 -->
+            <div class="service">
+                <ul>
+                    <li>
+                        <h5></h5>
+                        <p>价格亲民</p>
+                    </li>
+                    <li>
+                        <h5></h5>
+                        <p>物流快捷</p>
+                    </li>
+                    <li>
+                        <h5></h5>
+                        <p>品质新鲜</p>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- 帮助中心 -->
+            <div class="help">
+                <div class="left">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#">会员介绍</a></dd>
+                        <dd><a href="#">生活旅行</a></dd>
+                        <dd><a href="#">常见问题</a></dd>
+                    </dl>
+
+                    <dl>
+                        <dt>配送方式</dt>
+                        <dd><a href="#">上门自提</a></dd>
+                        <dd><a href="#">211限时达</a></dd>
+                        <dd><a href="#">配送服务查询</a></dd>
+                        <dd><a href="#">配送费收取标准</a></dd>
+                    </dl>
+
+                    <dl>
+                        <dt>支付方式</dt>
+                        <dd><a href="#">货到付款</a></dd>
+                        <dd><a href="#">在线支付</a></dd>
+                        <dd><a href="#">分期付款</a></dd>
+                        <dd><a href="#">公司转账</a></dd>
+                    </dl>
+
+                    <dl>
+                        <dt>售后服务</dt>
+                        <dd><a href="#">售后政策</a></dd>
+                        <dd><a href="#">价格保护</a></dd>
+                        <dd><a href="#">退款说明</a></dd>
+                        <dd><a href="#">返修/退换货</a></dd>
+                        <dd><a href="#">取消订单</a></dd>
+                    </dl>
+                </div>
+
+                <div class="right">
+                    <ul>
+                        <li>
+                            <div class="wx-qr"></div>
+                            <p>微信二维码</p>
+                        </li>
+                        <li>
+                            <div class="wx-qr"></div>
+                            <p>微信二维码</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- 版权 -->
+            <div class="copyright">
+                <p>
+                    <a href="#">关于我们</a>|
+                    <a href="#">帮助中心</a>|
+                    <a href="#">售后服务</a>|
+                    <a href="#">配送与验收</a>|
+                    <a href="#">商务合作</a>|
+                    <a href="#">搜索推荐</a>|
+                    <a href="#">友情链接</a>
+                </p>
+                <p>CopyRight @ 小兔鲜儿</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
