--- a/index.html
+++ b/index.html
@@ -65,6 +65,143 @@
         </div>
     </div>
 
+    <!-- banner -->
+    <div class="banner">
+        <div class="wrapper">
+            <!-- 轮播图 -->
+            <ul class="pic">
+                <li><a href="#"><img src="./uploads/banner_1.png" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/banner_1.png" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/banner_1.png" alt=""></a></li>
+            </ul>
+
+            <!-- 导航 -->
+            <div class="subnav">
+                <ul>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">生鲜</a>
+                            <a href="#">水果</a>
+                            <a href="#">蔬菜</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">生鲜</a>
+                            <a href="#">水果</a>
+                            <a href="#">蔬菜</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">美食</a>
+                            <a href="#">面点</a>
+                            <a href="#">干果</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">餐厨</a>
+                            <a href="#">数码产品</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">电器</a>
+                            <a href="#">床品</a>
+                            <a href="#">四件套</a>
+                            <a href="#">被枕</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">居家</a>
+                            <a href="#">奶粉</a>
+                            <a href="#">玩具</a>
+                            <a href="#">辅食</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">洗护</a>
+                            <a href="#">洗发</a>
+                            <a href="#">洗护</a>
+                            <a href="#">美妆</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">孕婴</a>
+                            <a href="#">奶粉</a>
+                            <a href="#">玩具</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">服饰</a>
+                            <a href="#">女装</a>
+                            <a href="#">男装</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                    <li>
+                        <div class="left">
+                            <a href="#" class="classify">杂货</a>
+                            <a href="#">户外</a>
+                            <a href="#">图书</a>
+                        </div>
+
+                        <div class="right">
+                            &gt;
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- 圆点指示器 -->
+            <ol>
+                <li class="selected"><i></i></li>
+                <li><i></i></li>
+                <li><i></i></li>
+            </ol>
+        </div>
+    </div>
+
     <!-- 底部 -->
     <div class="footer">
         <div class="wrapper">
