--- a/index.html
+++ b/index.html
@@ -202,6 +202,71 @@
         </div>
     </div>
 
+    <!-- 新鲜好物 -->
+    <div class="xxhw wrapper">
+        <div class="tittle">
+            <div class="left">
+                <h3>新鲜好物</h3>
+                <p>新鲜出炉 品质靠谱</p>
+            </div>
+            <div class="right">
+                <div class="all">
+                    <p><a href="#">查看全部</a></p>
+                    <span>&gt;</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="bd">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/new_goods_1.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>¥<span>79</span></h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/new_goods_2.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>¥<span>79</span></h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/new_goods_3.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>¥<span>79</span></h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/new_goods_4.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>¥<span>79</span></h4>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 底部 -->
     <div class="footer">
         <div class="wrapper">
