人气推荐模块

--- a/index.html
+++ b/index.html
@@ -267,6 +267,65 @@
         </div>
     </div>
 
+    <!-- 人气推荐 -->
+    <div class="rqtj wrapper">
+        <div class="tittle">
+            <div class="left">
+                <h3>人气推荐</h3>
+                <p>人气推荐 不容错过</p>
+            </div>
+        </div>
+
+        <div class="bd">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/popular_1.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>我猜的到 你的需要</h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/popular_2.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>人气好物推荐</h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/popular_3.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>编辑尽心整理推荐</h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="pic">
+                            <img src="./uploads/popular_4.jpg" alt="">
+                        </div>
+                        <div class="desc">
+                            <h3>拖吧</h3>
+                            <h4>给生活增添仪式感</h4>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 底部 -->
     <div class="footer">
         <div class="wrapper">
