--- a/index.html
+++ b/index.html
@@ -326,6 +326,31 @@
         </div>
     </div>
 
+    <!-- 热门品牌 -->
+    <div class="rmpp wrapper">
+        <div class="tittle">
+            <div class="left">
+                <h3>热门品牌</h3>
+                <p>人气爆款 不容错过</p>
+            </div>
+
+            <div class="button">
+                <a href="#" class="lt">&lt;</a>
+                <a href="#" class="rt">&gt;</a>
+            </div>
+        </div>
+
+        <div class="bd">
+            <ul>
+                <li><a href="#"><img src="./uploads/brand_goods_1.jpg" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/brand_goods_2.jpg" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/brand_goods_3.jpg" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/brand_goods_4.jpg" alt=""></a></li>
+                <li><a href="#"><img src="./uploads/brand_goods_5.jpg" alt=""></a></li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 底部 -->
     <div class="footer">
         <div class="wrapper">
