--- a/index.html
+++ b/index.html
@@ -351,6 +351,146 @@
         </div>
     </div>
 
+    <!-- 生鲜 -->
+    <div class="sx wrapper">
+        <div class="tittle">
+            <div class="left">
+                <h3>生鲜</h3>
+            </div>
+            <div class="right">
+                <div class="subnav">
+                    <ul>
+                        <li><a href="#">热门</a></li>
+                        <li><a href="#">蔬菜</a></li>
+                        <li><a href="#">肉禽蛋</a></li>
+                        <li><a href="#">水果</a></li>
+                        <li><a href="#">海鲜</a></li>
+                        <li><a href="#">零食</a></li>
+                        <li><a href="#">饮料</a></li>
+                    </ul>
+                </div>
+                <div class="all">
+                    <p><a href="#">查看全部</a></p>
+                    <span>&gt;</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="bd">
+            <div class="left">
+                <a href="#"><img src="./uploads/fresh_goods_cover.png" alt=""></a>
+            </div>
+            <div class="right">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/fresh_goods_2.jpg" alt=""></div>
+                            <p>美威 智利原味三文鱼排 240g/袋 4片装</p>
+                            <p>海鲜年货</p>
+                            <div class="price">¥<span>79</span></div>
+                        </a>
+                        <div class="cover">
+                            <p>找相似</p>
+                            <p></p>
+                            <p>发现更多宝贝<span>&gt;</span></p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <!-- 底部 -->
     <div class="footer">
         <div class="wrapper">
